test/files/invalid/invalid_enum_default.fbs
enum Foo: uint8 { X = 17 }

table Bar {
  x: Foo = 18;
}