test/files/invalid/invalid_enum_default.stderr
[0m[1m[38;5;9merror[0m[1m: [0m
  [0m[34m┌─[0m test/files/invalid/invalid_enum_default.fbs:4:12
  [0m[34m│[0m
[0m[34m4[0m [0m[34m│[0m   x: Foo = [0m[31m18[0m;
  [0m[34m│[0m            [0m[31m^^[0m [0m[31mExpression does not map to a valid enum variant[0m

Error: Bailing because of errors
